--- a/.github/workflows/integration-test-src.yml
+++ b/.github/workflows/integration-test-src.yml
@@ -69,16 +69,15 @@ jobs:
         with:
           allure_results: test/integration-test/openmldb-test-java/openmldb-sdk-test/target/allure-results
           gh_pages: gh-pages
-          subfolder: java-standalone-1
           allure_report: allure-report
-          allure_history: allure-history
+          allure_history: java-standalone-1
       - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v2
         env:
           PERSONAL_TOKEN: ${{ secrets.CR_PAT_ZW }}
           PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+          PUBLISH_DIR: java-standalone-1
           DESTINATION_DIR: java-1
 
 #  java-sdk-test-cluster-0:
@@ -157,16 +156,15 @@ jobs:
         with:
           allure_results: python/report/allure-results
           gh_pages: gh-pages
-          subfolder: python-standalone-1
           allure_report: allure-report
-          allure_history: allure-history
+          allure_history: python-standalone-1
       - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v2
         env:
           PERSONAL_TOKEN: ${{ secrets.CR_PAT_ZW }}
           PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+          PUBLISH_DIR: python-standalone-1
 
 #  python-sdk-test-standalone-1:
 #    runs-on: ubuntu-latest
