--- a/.github/workflows/integration-test-src.yml
+++ b/.github/workflows/integration-test-src.yml
@@ -70,14 +70,14 @@ jobs:
           allure_results: test/integration-test/openmldb-test-java/openmldb-sdk-test/target/allure-results
           gh_pages: gh-pages
           allure_report: allure-report
-          allure_history: java-standalone-1
+          allure_history: allure-history
       - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v2
         env:
           PERSONAL_TOKEN: ${{ secrets.CR_PAT_ZW }}
           PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: java-standalone-1
+          PUBLISH_DIR: allure-history
           DESTINATION_DIR: java-1
 
 #  java-sdk-test-cluster-0:
@@ -155,16 +155,16 @@ jobs:
         id: allure-report
         with:
           allure_results: python/report/allure-results
-          gh_pages: gh-pages
+          gh_pages: python-standalone-1
           allure_report: allure-report
-          allure_history: python-standalone-1
+          allure_history: allure-history
       - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v2
         env:
           PERSONAL_TOKEN: ${{ secrets.CR_PAT_ZW }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: python-standalone-1
+          PUBLISH_BRANCH: python-standalone-1
+          PUBLISH_DIR: allure-history
 
 #  python-sdk-test-standalone-1:
 #    runs-on: ubuntu-latest
