--- a/test/steps/openmldb_test.properties
+++ b/test/steps/openmldb_test.properties
@@ -1,4 +1,5 @@
 JAVA_SDK_VERSION=0.2.3
 OPENMLDB_SERVER_VERSION=0.2.3
 PYTHON_SDK_VERSION=0.2.3
+BATCH_VERSION=0.3.0-allinone-SNAPSHOT
 DIFF_VERSIONS=0.2.2
