--- a/.github/workflows/integration-test-src.yml
+++ b/.github/workflows/integration-test-src.yml
@@ -1,16 +1,18 @@
 name: INTEGRATION-TEST-SRC
 
 on:
-#  push:
-#  pull_request:
   workflow_dispatch:
-
+      EXEC_TEST_TYPE:
+        description: 'Which tests need to be executed? The options are all, python, java, batch and apiserver'
+        required: true
+        default: 'all'
 env:
   GIT_SUBMODULE_STRATEGY: recursive
   HYBRIDSE_SOURCE:
 
 jobs:
   java-sdk-test-standalone-0:
+    if: ${{ github.event.inputs.EXEC_TEST_TYPE == 'all' || github.event.inputs.EXEC_TEST_TYPE == 'java' }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
@@ -26,17 +28,16 @@ jobs:
           sh test/steps/build-java-sdk.sh
       - name: test
         run: source /root/.bashrc && bash test/steps/openmldb-sdk-test-java.sh -b SRC -c test_all.xml -d standalone -l "0"
-      - name: upload unit test results
+      - name: TEST Results
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: EnricoMi/publish-unit-test-result-action@v1
         with:
-          name: integration-test-sdk-java-standalone-0-${{ github.sha }}
-          path: |
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/junitreports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/failsafe-reports/junitreports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/failsafe-reports/TEST-*.xml
+          files: test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/TEST-*.xml
+          check_name: Java SDK Test Standalone0 PKG Report
+          comment_title: Java SDK Test Standalone0 PKG Report
+
   java-sdk-test-standalone-1:
+    if: ${{ github.event.inputs.EXEC_TEST_TYPE == 'all' || github.event.inputs.EXEC_TEST_TYPE == 'java' }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
@@ -52,18 +53,16 @@ jobs:
           sh test/steps/build-java-sdk.sh
       - name: test
         run: source /root/.bashrc && bash test/steps/openmldb-sdk-test-java.sh -b SRC -c test_all.xml -d standalone -l "1,2,3,4,5"
-      - name: upload unit test results
+      - name: TEST Results
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: EnricoMi/publish-unit-test-result-action@v1
         with:
-          name: integration-test-sdk-java-standalone-1-${{ github.sha }}
-          path: |
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/junitreports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/failsafe-reports/junitreports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/failsafe-reports/TEST-*.xml
+          files: test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/TEST-*.xml
+          check_name: Java SDK Test Standalone1 PKG Report
+          comment_title: Java SDK Test Standalone1 PKG Report
 
   java-sdk-test-cluster-0:
+    if: ${{ github.event.inputs.EXEC_TEST_TYPE == 'all' || github.event.inputs.EXEC_TEST_TYPE == 'java' }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
@@ -79,18 +78,16 @@ jobs:
           sh test/steps/build-java-sdk.sh
       - name: test
         run: source /root/.bashrc && bash test/steps/openmldb-sdk-test-java.sh -b SRC -c test_all.xml -d cluster -l "0"
-      - name: upload unit test results
+      - name: TEST Results
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: EnricoMi/publish-unit-test-result-action@v1
         with:
-          name: integration-test-sdk-java-cluster-0-${{ github.sha }}
-          path: |
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/junitreports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/failsafe-reports/junitreports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/failsafe-reports/TEST-*.xml
+          files: test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/TEST-*.xml
+          check_name: Java SDK Test Cluster0 PKG Report
+          comment_title: Java SDK Test Cluster0 PKG Report
 
   java-sdk-test-cluster-1:
+    if: ${{ github.event.inputs.EXEC_TEST_TYPE == 'all' || github.event.inputs.EXEC_TEST_TYPE == 'java' }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
@@ -106,18 +103,16 @@ jobs:
           sh test/steps/build-java-sdk.sh
       - name: test
         run: source /root/.bashrc && bash test/steps/openmldb-sdk-test-java.sh -b SRC -c test_all.xml -d cluster -l "1,2,3,4,5"
-      - name: upload unit test results
+      - name: TEST Results
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: EnricoMi/publish-unit-test-result-action@v1
         with:
-          name: integration-test-sdk-java-cluster-1-${{ github.sha }}
-          path: |
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/junitreports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/failsafe-reports/junitreports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/failsafe-reports/TEST-*.xml
+          files: test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/TEST-*.xml
+          check_name: Java SDK Test Cluster1 PKG Report
+          comment_title: Java SDK Test Cluster1 PKG Report
 
   python-sdk-test-standalone-0:
+    if: ${{ github.event.inputs.EXEC_TEST_TYPE == 'all' || github.event.inputs.EXEC_TEST_TYPE == 'python' }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
@@ -150,6 +145,7 @@ jobs:
 #          PUBLISH_DIR: allure-history
 
   python-sdk-test-standalone-1:
+    if: ${{ github.event.inputs.EXEC_TEST_TYPE == 'all' || github.event.inputs.EXEC_TEST_TYPE == 'python' }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
@@ -166,6 +162,7 @@ jobs:
         run: source /root/.bashrc && bash test/steps/openmldb-sdk-test-python.sh -b SRC -d standalone -l "1,2,3,4,5"
 
   apiserver-test:
+    if: ${{ github.event.inputs.EXEC_TEST_TYPE == 'all' || github.event.inputs.EXEC_TEST_TYPE == 'apiserver' }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
@@ -181,18 +178,16 @@ jobs:
           sh test/steps/build-java-sdk.sh
       - name: test
         run: source /root/.bashrc && bash test/steps/openmldb-apiserver-test.sh -b SRC -c test_all.xml -d standalone -l "0"
-      - name: upload unit test results
+      - name: TEST Results
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: EnricoMi/publish-unit-test-result-action@v1
         with:
-          name: integration-test-apiserver-${{ github.sha }}
-          path: |
-            test/integration-test/openmldb-test-java/openmldb-http-test/target/surefire-reports/junitreports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-http-test/target/surefire-reports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-http-test/target/failsafe-reports/junitreports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-http-test/target/failsafe-reports/TEST-*.xml
+          files: test/integration-test/openmldb-test-java/openmldb-http-test/target/surefire-reports/TEST-*.xml
+          check_name: APIServer PKG Report
+          comment_title: APIServer PKG Report
 
   batch-test:
+    if: ${{ github.event.inputs.EXEC_TEST_TYPE == 'all' || github.event.inputs.EXEC_TEST_TYPE == 'batch' }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
@@ -204,22 +199,10 @@ jobs:
         run: sh test/steps/modify-properties.sh ${{ github.event.inputs.JAVA_SDK_VERSION }} ${{ github.event.inputs.OPENMLDB_SERVER_VERSION }} ${{ github.event.inputs.PYTHON_SDK_VERSION }} ${{ github.event.inputs.BATCH_VERSION }} ${{ github.event.inputs.DIFF_VERSIONS }}
       - name: test
         run: source /root/.bashrc && bash test/steps/openmldb-batch-test.sh -b SRC
-
-  publish-test-results:
-    runs-on: ubuntu-latest
-    needs: [ "java-sdk-test-standalone-0","java-sdk-test-standalone-1","java-sdk-test-cluster-0","java-sdk-test-cluster-1","apiserver-test" ]
-    # the action will only run on 4paradigm/OpenMLDB's context, not for fork repo or dependabot
-#    if: >
-#      always() && github.event_name == 'push' || (
-#      github.event.pull_request.head.repo.full_name == github.repository &&
-#      github.event.sender.login != 'dependabot[bot]' )
-    steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-
-      - name: INTEGRATION TEST PKG Results
+      - name: TEST Results
+        if: always()
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
-          files: integration-test-*/**/*.xml
-          check_name: INTEGRATION Test Report
-          comment_title: INTEGRATION Test Report
+          files: test/batch-test/openmldb-batch-test/target/surefire-reports/TEST-*.xml
+          check_name: Batch Test PKG Report
+          comment_title: Batch Test PKG Report
