feat: update hybridse sdk version in openmldb batch

--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -48,7 +48,7 @@
 		<spark.version>3.0.0</spark.version>
 		<spark.dependencyScope>provided</spark.dependencyScope>
 		<default.project.version>0.2.3</default.project.version>
-		<default.hybridse.sdk.version>0.2.4</default.hybridse.sdk.version>
+		<default.hybridse.sdk.version>0.2.4.20210928</default.hybridse.sdk.version>
 	</properties>
 
 	<profiles>
