fix: force deploy 0.2.4-snapshot

--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -19,7 +19,7 @@ defaults:
 
 env:
   HYBRIDSE_PATH: hybridse
-  force_deploy_java_allinone: false
+  force_deploy_java_allinone: true
 
 jobs:
   linux-build:
