feat(parser): support 'drop deployment'

--- a/cases/plan/cmd.yaml
+++ b/cases/plan/cmd.yaml
@@ -156,3 +156,11 @@ cases:
         +-node[CMD]
           +-cmd_type: show deployment
           +-args: [foo]
+  - id: drop_deployment
+    desc: drop deployment foo
+    sql: DROP DEPLOYMENT foo;
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: drop deployment
+          +-args: [foo]
